--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>    
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
 
 </body>
 
